@@ -11,3 +11,4 @@
 * Quentin Pagès (occitan translation)
 * Phyks (Lucas Verney)
 * Pierre Rudloff
+* Belvar (Gwenn M) (breton translation)
